hphp/test/zend/good/Zend/tests/traits/language015.php.expectf

Fatal error: Unknown trait 'T2' in %s/language015.php on line 8
